# keeper

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  LICENSE  MCP_AGENT_GUIDE.md  README.md  SECURITY.md  USER_GUIDE.md  install.sh  security_fixes_plan.md  session-ses_3eb1.md
.github/workflows/: ci.yml  docs.yml  mcp-artifacts.yml  release.yml
.tark/: memory.db  policy.db  usage.db
.tark/sessions/: current
.tark/sessions/session_cef52f05-bc19-4a60-800e-3fea583cc912/: session.json  tui_prefs.json
.tark/sessions/session_cef52f05-bc19-4a60-800e-3fea583cc912/conversations/: active.json
docs/: UPDATE_GUIDE.md
mcp/keeper-mcp/: Cargo.toml  README.md  mcp.json.example
mcp/keeper-mcp/src/: main.rs
plans/: security-fixes-plan.md
plans/init/: hld.md  kickstart.md  lld.md  mocks.md  release.md  requirements.md  testing.md
src/: backup.rs  cli.rs  client.rs  config.rs  daemon.rs  db.rs  export.rs  formatting.rs  ipc.rs  keystore.rs  logger.rs  main.rs  models.rs  paths.rs  prompt.rs  sanitize.rs  security.rs  self_update.rs  session.rs  sigil.rs  timeline.rs  transfer.rs  tui.rs
src/migration/: backup.rs  manager.rs  manifest.rs  mod.rs
src/security/: memory.rs
tests/: bdd.rs  e2e.rs
tests/bdd/features/: migration.feature  notes.feature  recovery.feature  session.feature  timeline.feature  update.feature
tests/security/: password_memory_tests.rs
tests/snapshots/: e2e__due_timeline_workspace_filter.snap  e2e__quick_capture_flow.snap
