[package]
name = "keeper"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI & Async
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.32", features = ["full"] }
# UI & Formatting
reedline = "0.24"
tabled = "0.14"
# Daemon & IPC
daemonize = "0.5"
interprocess = "1.2" # Or tokio::net::UnixStream
# Database (Crucial: bundled-sqlcipher)
rusqlite = { version = "0.29", features = ["bundled-sqlcipher"] }
# Security
argon2 = "0.5"
zeroize = "1.6"
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.22"
bip39 = { version = "2.0", features = ["rand"] }
# Time & Serialization
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Utils
thiserror = "1.0"
anyhow = "1.0"
directories = "5.0" # For finding home dir correctly across OS

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
insta = { version = "1.34", features = ["yaml"] }
cucumber = "0.21"
futures = "0.3"

[[test]]
name = "bdd"
harness = false
